# bitbybit

./: .gitignore  Makefile  README.md  pyproject.toml
bitbybit/autoencoders/: README.md  ae.ipynb  ae.py  vq.py  vqvae.ipynb  vqvae.py
bitbybit/transformers/: cache.py
ml_zoo/autoencoders/: README.md  vqvae.ipynb  vqvae.py
ml_zoo/transformers/: README.md  attn.py  cache.py  gpt2.py  gpt2kv.py  lora.py  train_lm.py  train_lm_lora.py
src/autoencoders/: README.md  ae.ipynb  ae.py  dataset.py  vae.ipynb  vae.py  vq.py  vqvae.ipynb  vqvae.py
src/lora/: train_lm_lora.py
src/transformers/: gpt2.py  train_lm.py
