[project]
name = "bitbybit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "ruff>=0.14.4",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.1",
    "torchview>=0.2.7",
    "transformers>=4.57.1",
]
